# ppe_gui_package

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  package.xml  setup.py
.github/workflows/: update_version_badge.yml
config/: avend_config.yaml
docs/: CHANGELOG.md  README.md
docs/additional_documents/: CHANGELOG.md
gate/: safety_gate_controller.py
gate/ESP32_Bluetooth_Comms/: ESP32_Bluetooth_Comms.ino
gui_package/: dummy_inventory_publisher.py  dummy_ppe_status.py  experimental_ppe_gui.py  ppe_gui.py
gui_package/avend/: __init__.py  avend_connector.py  logger.py
gui_package/dummy_test/: __init__.py  dummy_inventory_publisher.py  dummy_ppe_status.py
gui_package/experimental/: README.md  __init__.py  main.py  main_window.py  ros_node.py
gui_package/experimental/utils/: __init__.py  colors.py  context.py  logger.py
gui_package/experimental/widgets/: __init__.py  buttons.py  dialogs.py  override_dialog.py  sections.py  settings_dialog.py
gui_package/gate/: __init__.py  safety_gate_controller.py
gui_package/gate/ESP32_Bluetooth_Comms/: ESP32_Bluetooth_Comms.ino
gui_package/main_gui_modules/: README.md  __init__.py  camera_feed.py  main.py  main_window.py  ros_node.py
gui_package/main_gui_modules/jsonSupport/: __init__.py  dispensing_log.json  inventory_data.json  override_log.json  ppe_dispensing_report.csv  reporting.py
gui_package/main_gui_modules/recordedBags/: __init__.py  record_dispense_bag.py
gui_package/main_gui_modules/recordedBags/dispense_bag_20250219_153825.db3/: dispense_bag_20250219_153825.db3_0.db3  metadata.yaml
gui_package/main_gui_modules/recordedBags/dispense_bag_20250219_154259.db3/: dispense_bag_20250219_154259.db3_0.db3  metadata.yaml
gui_package/main_gui_modules/recordedBags/dispense_bag_20250219_155813.db3/: dispense_bag_20250219_155813.db3_0.db3  metadata.yaml
gui_package/main_gui_modules/recordedBags/dispense_bag_20250219_192729.db3/: metadata.yaml
gui_package/main_gui_modules/utils/: __init__.py  accessibility_handler.py  colors.py  context.py  json_handler.py  logger.py  report_handler.py  settings_handler.py
gui_package/main_gui_modules/widgets/: __init__.py  buttons.py  dialogs.py  help.py  override.py  override_dialog.py  sections.py  settings.py  settings_dialog.py
launch/: avend_connector.launch.py  dummy_nodes.launch.py  experimental_gui.launch.py  main_ppe_gui.launch.py
