<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_package</name>
  <version>0.10.1</version>
  <description>
    A ROS2 package containing a PyQt5-based graphical user interface for controlling and monitoring a 
    PPE (Personal Protective Equipment) vending machine.
  </description>
  <maintainer email="ckyb63@gmail.com">Max Chen</maintainer>
  <license>Proprietary</license>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-pyqt5</build_depend>
  <build_depend>python3-serial</build_depend>
  <build_depend>ros2bag_py</build_depend>

  <!-- Executables Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>ros2bag_py</exec_depend>
  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
